# cadex-task

./: CMakeLists.txt  README.md
curves/: CMakeLists.txt
curves/include/: Circle.h  Ellipse.h  Helix.h  ICurve.h  Vec3.h  curves.h
curves/src/: Circle.cpp  Ellipse.cpp  Helix.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
src/: Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h  Helix.cpp  Helix.h  ICurve.h  Vec3.h  Vector3D.h
test/: CMakeLists.txt  curves_test.cpp
